# VAPMIP

./: .gitignore  CHANGELOG.md  CONTEXT_PRIMER_2026-05-26_PRIME_DIRECTIVES.txt  CONTEXT_PRIMER_2026-05-26_SEDENION_ROKO.txt  EarPiece.txt  Makefile  OfflineNotes.txt  README.md  RF_monad.py  SedenionOperators.txt  TODO  TODO.md  VQ_rotary_monad.py  ZD_rotary_monad.c  ZD_rotary_monad.h  ZD_rotary_monad.py  auth_totp.c  auth_totp.h  burn.py  corpus_list.json  demo.py  english_corpus.txt  foundations.txt  fritzing.py  listen.py  lshs.py  lshs_captain.py  lshs_laplacian.py  lshs_portrait.py  lshs_read.py  lshs_sdr.py  lshs_speak.py  mathematics_corpus.txt  meaning.txt  monad.c  monad.py  phonon.py  ptolemy2  python_corpus.txt  rotary_monad.c  (+7 more)
PtolC/: AUTHORS  CMakeLists.txt  Makefile  NEWS  README.md  checkpoint.c  checkpoint.h  code.c  code.h  daemon.c  daemon.h  ingest.c  main.c  monad.c  monad.h  ptol.c  ptol_layer.py  ptol_observe.py  ptolemy.h  search.c  search.h  sensor.c  sensor.h  state.c  state.h  tokenizer.c  tokenizer.h  zork.c  zork.h
PtolC/man/: ptolemy.1  ptolemyignore.5
PtolC/systemd/: ptolemy.service  ptolemy.socket
android/: build_apk.sh  corpus_list.json
android/PtolemySeeder/: build.gradle  settings.gradle
android/PtolemySeeder/app/: build.gradle  proguard-rules.pro
android/PtolemySeeder/app/src/main/: AndroidManifest.xml
android/PtolemySeeder/app/src/main/assets/: corpus_list.json  physics_corpus.txt
android/PtolemySeeder/app/src/main/java/com/ptolemy/seeder/: CorpusDetailActivity.kt  MainActivity.kt  SeedService.kt  SettingsActivity.kt
android/PtolemySeeder/app/src/main/python/: monad.py  seed_runner.py
android/PtolemySeeder/app/src/main/python/skills/: corpus.py  corpus_mathematics.py  fermat_lattice.py  foundations.py  meaning.py  study.py
android/PtolemySeeder/app/src/main/res/layout/: activity_main.xml
android/PtolemySeeder/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
android/PtolemySeeder/app/src/main/res/xml/: preferences.xml
checkpoints/: README.md  monad_wordnet_20260516_215743_documents_run_1_pre_vowelfix.assessment.json  monad_wordnet_20260516_215815_documents_run_1_pre_vowelfix.assessment.json  monad_wordnet_20260516_220913_documents_run_1_pre_vowelfix.assessment.json
checkpoints/clean/: PRIMER.md
checkpoints/dirty/: PRIMER.md
code-corpora/: c_corpus.txt
corpus/: holcus_language_corpus.txt  holcus_seed.txt
docs/outreach/: crawford_email.txt  padre_guilherme_email.txt  padre_guilherme_email_2.txt  pope_letter.txt
docs/poems/: recursive_causal_cavitation.md
docs/primers/: PRIMER_2026-05-29_Phase2_to_Phase5.txt
docs/wiki/: Definition-from-Above.md  Existential-Velocity.md  Name-Table.md  Operating-the-Monad.md  PTorrent-APK-v2.md  RedBlue-Hamiltonian-Sedenion-Matrix-Space.md  Tuning-the-Engine.md  Zero-Lattice.md
engines/: __init__.py  _sedenion.py  e01_operator_selforg.py  e02_gnarl_validator.py  e03_hermite_cam.py  e04_tia_similarity.py  e05_nball_transformer.py  e06_two_trees.py  e07_observer_fixed_point.py  e08_vortex_quantizing_shear.py  e09_j2_involution.py  e10_caustic_l_dynamic.py  e11_two_doublings.py  e12_index_not_value.py  e13_fermat_riemann_firing.py  e14_fermat_near_miss.py  e15_futurama_theorem.py  e16_penrose_swap.py  e16b_boundary_ascending.py  e17_hyperindexing.py
face/: App.tsx  app.json  package-lock.json  package.json
face/assets/: vocab.json
face/src/: ble.ts  constants.ts  engine.ts  store.ts
notebooks/: 01_ground_state_and_zeros.ipynb  03_self_adjoint_hamiltonian.ipynb  06_full_pipeline.ipynb  07_holcus_identity.ipynb  08_four_rotations.ipynb  09_tdi_engine.ipynb  10_revised_navier_stokes.ipynb  11_language_as_navier_stokes.ipynb  12_e01_operator_selforg.ipynb  13_e02_gnarl_validator.ipynb  14_e03_hermite_cam.ipynb  15_e04_tia_similarity.ipynb
notebooks/c/: 01c_ground_state_and_zeros.ipynb  02c_hyperindex_word_addressing.ipynb  03c_self_adjoint_hamiltonian.ipynb  04c_lagrangian_learning.ipynb  05c_noether_current_speaking.ipynb  06c_full_pipeline.ipynb  install_c_kernel.sh
physics/: cosmo_engine.py  uft_engine.py
ptorrents/: c_posix.ptorrent  english_complete.ptorrent  fermat.ptorrent  foundations.ptorrent  framenet.ptorrent  mathematics.ptorrent  meaning.ptorrent  physics.ptorrent  python.ptorrent  riemann_zeros.ptorrent
skills/: __init__.py  apisniff.py  code.py  config.py  corpus.py  corpus_c.py  corpus_physics.py  corpus_python.py  crawler.py  draw.py  fermat_lattice.py  gallery.py  github.py  integrity.py  lexicon.py  logger.py  mind_eye.py  monitor.py  music.py  network.py  scholar.py  search.py  sensor.py  shell.py  sources.py  staging.py  study.py  voice.py  voice_auth.py  workbench.py
tests/: sedenion_bridge.py
tools/: fresh_start.sh  gen_totp_secret.py  generate_image.py  install_prime_directives.py  make_prime_corpus.py  seed_prime_directives.py  teach_english.sh  watch_monad.sh
